--- a/myfirstflutterapp/pubspec.yaml
+++ b/myfirstflutterapp/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   flutter_launcher_icons: ^0.13.1
+  string_validator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/data.json
+    - assets/background/bg.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
